@@ -14,13 +14,24 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+/**
+ * Test class for verifying the functionality of {@link ClientRepository}.
+ *
+ * <p>
+ * This class includes tests for finding clients by their IDs, both for existing
+ * and non-existing clients, using a temporary CSV file for testing purposes.
+ * </p>
+ */
 class ClientRepositoryTest {
     private static final String TEST_FILE_PATH = "src/test/resources/clients.csv";
     private ClientRepository clientRepository;
 
+    /**
+     * Method executed before each test, which sets up the necessary test data
+     * in a temporary CSV file and initializes the client repository.
+     */
     @BeforeEach
     void setUp() throws IOException {
-
         try (FileWriter writer = new FileWriter(TEST_FILE_PATH)) {
             writer.write("1,John,Doe\n");
             writer.write("2,Jane,Smith\n");
@@ -33,6 +44,14 @@ class ClientRepositoryTest {
         clientRepository = new ClientRepository(accounts, TEST_FILE_PATH);
     }
 
+    /**
+     * Tests finding an existing client by ID.
+     *
+     * <p>
+     * This test verifies that when a valid client ID is provided, the corresponding
+     * client object is returned with the correct attributes.
+     * </p>
+     */
     @Test
     void testFindById_ExistingClient() {
         Client client = clientRepository.findById(1);
@@ -42,15 +61,27 @@ class ClientRepositoryTest {
         assertEquals("John", client.getFirstName());
         assertEquals("Doe", client.getLastName());
         assertEquals(1, client.getAccounts().size());
-        assertEquals("RUB", client.getAccounts().getFirst().getCurrency());
+        assertEquals("RUB", client.getAccounts().get(0).getCurrency());
     }
 
+    /**
+     * Tests finding a non-existing client by ID.
+     *
+     * <p>
+     * This test ensures that when an invalid client ID is provided, the method
+     * returns null, indicating that no client was found.
+     * </p>
+     */
     @Test
     void testFindById_NonExistingClient() {
         Client client = clientRepository.findById(3);
         assertNull(client);
     }
 
+    /**
+     * Method executed after each test, which cleans up the temporary test file
+     * created for the test scenarios.
+     */
     @AfterEach
     void end(){
         new File(TEST_FILE_PATH).delete();
